; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_geoip1.c_set_geolocation.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_geoip1.c_set_geolocation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@conf = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @set_geolocation(i8* %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  store i32 0, i32* %10, align 4
  %11 = call i32 (...) @is_geoip_resource()
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %4
  store i32 1, i32* %5, align 4
  br label %36

14:                                               ; preds = %4
  %15 = load i8*, i8** %6, align 8
  %16 = call i64 @invalid_ipaddr(i8* %15, i32* %10)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %14
  store i32 1, i32* %5, align 4
  br label %36

19:                                               ; preds = %14
  %20 = load i8*, i8** %6, align 8
  %21 = load i8*, i8** %8, align 8
  %22 = load i32, i32* %10, align 4
  %23 = call i32 @geoip_get_country(i8* %20, i8* %21, i32 %22)
  %24 = load i8*, i8** %6, align 8
  %25 = load i8*, i8** %7, align 8
  %26 = load i32, i32* %10, align 4
  %27 = call i32 @geoip_get_continent(i8* %24, i8* %25, i32 %26)
  %28 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @conf, i32 0, i32 0), align 8
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %35

30:                                               ; preds = %19
  %31 = load i8*, i8** %6, align 8
  %32 = load i8*, i8** %9, align 8
  %33 = load i32, i32* %10, align 4
  %34 = call i32 @geoip_get_city(i8* %31, i8* %32, i32 %33)
  br label %35

35:                                               ; preds = %30, %19
  store i32 0, i32* %5, align 4
  br label %36

36:                                               ; preds = %35, %18, %13
  %37 = load i32, i32* %5, align 4
  ret i32 %37
}

declare dso_local i32 @is_geoip_resource(...) #1

declare dso_local i64 @invalid_ipaddr(i8*, i32*) #1

declare dso_local i32 @geoip_get_country(i8*, i8*, i32) #1

declare dso_local i32 @geoip_get_continent(i8*, i8*, i32) #1

declare dso_local i32 @geoip_get_city(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
